--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -64,7 +64,7 @@ spring:
               endpoint: http://dev.servers.divisosofttech.com:8081
             schema:
               avro:
-                schema-locations: classpath:avro/store.avsc
+                schema-locations: classpath:avro/store-schema.avsc
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/newstore?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
