--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -55,7 +55,7 @@ spring:
                 output:
                     destination: topic-jhipster
                 store:
-                    destination: store
+                    destination: store-topic
                     contentType: application/*+avro
                     producer:
                        useNativeEncoding: true
